I18n: Project specific locales & loading of locales out of component class

--- a/src/components/specific/Demo/Months/locales/cz.json
+++ b/src/components/specific/Demo/Months/locales/cz.json
@@ -1,5 +1,7 @@
 {
-  "january": "Leden 1",
-  "february": "Leden 2",
-  "march": "Leden 3"
+  "months": {
+    "january": "Leden (komp. Months)",
+    "february": "Únor (komp. Months)",
+    "march": "Březen (komp. Months)"
+  }
 }
