--- a/src/components/specific/Demo/Months/locales/en.json
+++ b/src/components/specific/Demo/Months/locales/en.json
@@ -1,4 +1,7 @@
 {
-  "january": "January",
-  "february": "February"
+  "months": {
+    "january": "January (comp. Months)",
+    "february": "February (comp. Months)",
+    "march": "March (comp. Months)"
+  }
 }
