Scope section in BO metadata

--- a/src/apps/backOffice/locales/cz/common.json
+++ b/src/apps/backOffice/locales/cz/common.json
@@ -1,6 +1,8 @@
 {
   "labels": {
-    "nameInternal": "Interní název"
+    "nameInternal": "Interní název",
+    "configuration": "Konfigurace",
+    "description": "Popis"
   }
 }
 
