--- a/src/apps/backOffice/locales/en/common.json
+++ b/src/apps/backOffice/locales/en/common.json
@@ -1,5 +1,7 @@
 {
   "labels": {
-    "nameInternal": "Internal name"
+    "nameInternal": "Internal name",
+    "configuration": "Configuration",
+    "description": "Description"
   }
 }
