Metadata Config - Application select

--- a/src/apps/backOffice/locales/en/common.json
+++ b/src/apps/backOffice/locales/en/common.json
@@ -1,5 +1,6 @@
 {
   "labels": {
+    "applicationCapitalized": "Application",
     "nameInternal": "Internal name",
     "configuration": "Configuration",
     "description": "Description"
