--- a/src/apps/backOffice/locales/cz/common.json
+++ b/src/apps/backOffice/locales/cz/common.json
@@ -1,5 +1,6 @@
 {
   "labels": {
+    "applicationCapitalized": "Aplikace",
     "nameInternal": "Interní název",
     "configuration": "Konfigurace",
     "description": "Popis"
