Metadata config - handle All apps option in App select

--- a/src/apps/backOffice/locales/en/common.json
+++ b/src/apps/backOffice/locales/en/common.json
@@ -1,4 +1,5 @@
 {
+  "allApps": "All applications",
   "labels": {
     "applicationCapitalized": "Application",
     "nameInternal": "Internal name",
