Scopes & Layer templates BO components updates - description added & new locales structure

--- a/src/locales/cz/common.json
+++ b/src/locales/cz/common.json
@@ -4,6 +4,7 @@
 	"wednesday": "Středa"
   },
   "cancelCapitalized": "Zrušit",
+  "createCapitalized": "Vytvořit",
   "deleteCapitalized": "Smazat",
   "months": {
 	"january": "Leden",
