--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -5,6 +5,7 @@
 	"wednesday": "Wednesday"
   },
   "cancelCapitalized": "Cancel",
+  "createCapitalized": "Create",
   "deleteCapitalized": "Delete",
   "months": {
 	"january": "January",
