Attribute metadata list and screen components setup & associated store update

--- a/src/locales/cz/backOffice.json
+++ b/src/locales/cz/backOffice.json
@@ -1,6 +1,7 @@
 {
   "metadata": {
 	"names": {
+	  "attribute": "Atribut",
 	  "layerTemplate": "Šablona vrstvy",
 	  "period": "Perioda",
 	  "place": "Místo",
