--- a/src/locales/en/backOffice.json
+++ b/src/locales/en/backOffice.json
@@ -1,8 +1,9 @@
 {
   "metadata": {
 	"names": {
+	  "attribute": "Attribute",
 	  "layerTemplate": "Layer template",
-	  "period": "Perioda",
+	  "period": "Period",
 	  "place": "Place",
 	  "scope": "Scope"
 	},
