BackOffice - Tags metadata management

--- a/src/locales/cz/backOffice.json
+++ b/src/locales/cz/backOffice.json
@@ -5,7 +5,8 @@
 	  "layerTemplate": "Šablona vrstvy",
 	  "period": "Perioda",
 	  "place": "Místo",
-	  "scope": "Scope"
+	  "scope": "Scope",
+	  "tag": "Tag"
 	},
 	"formLabels": {
 	  "allApps": "Všechny aplikace",
