Change indicator to esponFuoreIndicator

--- a/src/locales/cz/backOffice.json
+++ b/src/locales/cz/backOffice.json
@@ -3,8 +3,8 @@
 	"names": {
 	  "attribute": "Atribut",
 	  "attribute_plural": "Atributy",
-	  "indicator": "Indikátor",
-	  "indicator_plural": "Indikátory",
+	  "esponFuoreIndicator": "Indikátor",
+	  "esponFuoreIndicator": "Indikátory",
 	  "layerTemplate": "Šablona vrstvy",
 	  "layerTemplate_plural": "Šablony vrstev",
 	  "period": "Perioda",
