--- a/src/locales/cz/backOffice.json
+++ b/src/locales/cz/backOffice.json
@@ -11,8 +11,6 @@
 	  "period_plural": "Periody",
 	  "place": "Místo",
 	  "place_plural": "Místa",
-	  "scope": "Scope",
-	  "scope_plural": "Scopy",
 	  "tag": "Tag",
 	  "tag_plural": "Tagy",
 	  "view": "Náhled",
@@ -32,5 +30,9 @@
 	  "state": "Stav",
 	  "type": "Typ"
 	}
-  }
+	},
+	"apps": {
+		"scope": "Scope",
+		"scope_plural": "Scopy"
+	}
 }
