--- a/src/locales/en/backOffice.json
+++ b/src/locales/en/backOffice.json
@@ -11,7 +11,6 @@
 	  "period_plural": "Periods",
 	  "place": "Place",
 	  "place_plural": "Places",
-	  "scope": "Scope",
 	  "scope_plural": "Scopes",
 	  "tag": "Tag",
 	  "tag_plural": "Tags",
@@ -32,5 +31,11 @@
 	  "state": "State",
 	  "type": "Type"
 	}
-  }
+  },
+	"apps": {
+		"names": {
+			"scope": "Scope",
+			"scope_plural": "Scopes"
+		}
+	}
 }
