--- a/src/locales/cz/backOffice.json
+++ b/src/locales/cz/backOffice.json
@@ -1,21 +1,4 @@
 {
-  "metadata": {
-	"names": {
-	  "attribute": "Atribut",
-	  "attribute_plural": "Atributy",
-	  "esponFuoreIndicator": "Indikátor",
-	  "esponFuoreIndicator": "Indikátory",
-	  "layerTemplate": "Šablona vrstvy",
-	  "layerTemplate_plural": "Šablony vrstev",
-	  "period": "Perioda",
-	  "period_plural": "Periody",
-	  "place": "Místo",
-	  "place_plural": "Místa",
-	  "tag": "Tag",
-	  "tag_plural": "Tagy",
-	  "view": "Náhled",
-	  "view_plural": "Náhledy"
-	},
 	"formLabels": {
 	  "allApps": "Všechny aplikace",
 	  "application": "Aplikace",
@@ -29,7 +12,24 @@
 	  "period": "Perioda",
 	  "state": "Stav",
 	  "type": "Typ"
-	}
+	},
+  "metadata": {
+		"names": {
+			"attribute": "Atribut",
+			"attribute_plural": "Atributy",
+			"esponFuoreIndicator": "Indikátor",
+			"esponFuoreIndicator_plural": "Indikátory",
+			"layerTemplate": "Šablona vrstvy",
+			"layerTemplate_plural": "Šablony vrstev",
+			"period": "Perioda",
+			"period_plural": "Periody",
+			"place": "Místo",
+			"place_plural": "Místa",
+			"tag": "Tag",
+			"tag_plural": "Tagy",
+			"view": "Náhled",
+			"view_plural": "Náhledy"
+		}
 	},
 	"apps": {
 		"scope": "Scope",
