Add to backOffice new section apps/layertrees

--- a/src/locales/cz/backOffice.json
+++ b/src/locales/cz/backOffice.json
@@ -32,7 +32,10 @@
 		}
 	},
 	"apps": {
-		"scope": "Scope",
-		"scope_plural": "Scopy"
+		"names": {
+			"scope": "Scope",
+			"scope_plural": "Scopy",
+			"layerTrees": "Stromy vrstev"
+		}
 	}
 }
