--- a/src/locales/en/backOffice.json
+++ b/src/locales/en/backOffice.json
@@ -13,28 +13,29 @@
 	  "state": "State",
 	  "type": "Type"
 	},
-  "metadata": {
-		"names": {
-			"attribute": "Attribute",
-			"attribute_plural": "Attributes",
-			"esponFuoreIndicator": "Indicator",
-			"esponFuoreIndicator_plural": "Indicators",
-			"layerTemplate": "Layer template",
-			"layerTemplate_plural": "Layer templates",
-			"period": "Period",
-			"period_plural": "Periods",
-			"place": "Place",
-			"place_plural": "Places",
-			"tag": "Tag",
-			"tag_plural": "Tags",
-			"view": "View",
-			"view_plural": "Views"
-		}
-  },
+	"metadata": {
+			"names": {
+				"attribute": "Attribute",
+				"attribute_plural": "Attributes",
+				"esponFuoreIndicator": "Indicator",
+				"esponFuoreIndicator_plural": "Indicators",
+				"layerTemplate": "Layer template",
+				"layerTemplate_plural": "Layer templates",
+				"period": "Period",
+				"period_plural": "Periods",
+				"place": "Place",
+				"place_plural": "Places",
+				"tag": "Tag",
+				"tag_plural": "Tags",
+				"view": "View",
+				"view_plural": "Views"
+			}
+	},
 	"apps": {
 		"names": {
 			"scope": "Scope",
-			"scope_plural": "Scopes"
+			"scope_plural": "Scopes",
+			"layerTrees": "Layer trees"
 		}
 	}
 }
