Add support for background layers to layerTree

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -18,5 +18,11 @@
 	"login": "Log in",
 	"logout": "Log out",
 	"passphrase": "Passphrase"
-  }
+  },
+  "layers": {
+    "backgroundLayer": "Background layer",
+    "backgroundLayer_plural": "Background layers",
+    "layers": "Layers",
+    "layer": "Layer"
+}
 }
