--- a/src/locales/cz/common.json
+++ b/src/locales/cz/common.json
@@ -1,21 +1,27 @@
 {
   "days": {
-	"monday": "Pondělí",
-	"wednesday": "Středa"
+    "monday": "Pondělí",
+    "wednesday": "Středa"
   },
   "cancelCapitalized": "Zrušit",
   "createCapitalized": "Vytvořit",
   "deleteCapitalized": "Smazat",
   "months": {
-	"january": "Leden",
-	"february": "Únor",
-	"march": "Březen"
+    "january": "Leden",
+    "february": "Únor",
+    "march": "Březen"
   },
   "nameCapitalized": "Název",
   "saveCapitalized": "Uložit",
   "user": {
-	"login": "Přihlásit",
-	"logout": "Odhlásit",
-	"passphrase": "Heslo"
+    "login": "Přihlásit",
+    "logout": "Odhlásit",
+    "passphrase": "Heslo"
+  },
+  "layers": {
+      "backgroundLayer": "Podkladová vrstva",
+      "backgroundLayer_plural": "Podkladové vrstvy",
+      "layers": "Vrstvy",
+      "layer": "Vrstva"
   }
 }
