--- a/src/locales/en/backOffice.json
+++ b/src/locales/en/backOffice.json
@@ -16,22 +16,24 @@
 	  "valueType": "Value type"
 	},
 	"metadata": {
-			"names": {
-				"attribute": "Attribute",
-				"attribute_plural": "Attributes",
-				"esponFuoreIndicator": "Indicator",
-				"esponFuoreIndicator_plural": "Indicators",
-				"layerTemplate": "Layer template",
-				"layerTemplate_plural": "Layer templates",
-				"period": "Period",
-				"period_plural": "Periods",
-				"place": "Place",
-				"place_plural": "Places",
-				"tag": "Tag",
-				"tag_plural": "Tags",
-				"view": "View",
-				"view_plural": "Views"
-			}
+		"names": {
+			"attribute": "Attribute",
+			"attribute_plural": "Attributes",
+			"case": "Case",
+			"case_plural": "Cases",
+			"esponFuoreIndicator": "Indicator",
+			"esponFuoreIndicator_plural": "Indicators",
+			"layerTemplate": "Layer template",
+			"layerTemplate_plural": "Layer templates",
+			"period": "Period",
+			"period_plural": "Periods",
+			"place": "Place",
+			"place_plural": "Places",
+			"tag": "Tag",
+			"tag_plural": "Tags",
+			"view": "View",
+			"view_plural": "Views"
+		}
 	},
 	"apps": {
 		"names": {
