BO: Add configurations config (w. :bug: - application assignment doesn't work)

--- a/src/locales/cz/backOffice.json
+++ b/src/locales/cz/backOffice.json
@@ -39,6 +39,8 @@
 		"names": {
 			"scope": "Rámec",
 			"scope_plural": "Rámce",
+			"configuration": "Konfigurace",
+			"configuration_plural": "Konfigurace",
 			"layerTrees": "Stromy vrstev"
 		}
 	}
